assets/css/main.less
/* ... */
nav, main, footer {
	@media(max-width: 840px) {
		padding-left: 24px;
		padding-right: 24px;
	}
}

main.home,
main.about { /* homepage layout */
	& article {
		display: grid;
		grid-template-columns: minmax(300px, 300px) minmax(476px, 1fr);
		grid-template-rows: auto;
		grid-template-areas:
		"col-1 col-2";
		margin-top: var(--xl);
		@media(max-width: 840px) {
			display: block;
			margin-top: var(--l);
		}
		& header {
			grid-area: col-1;
			& :first-child {
				margin-top: 1rem;
				@media(max-width: 840px) {
					margin-top: initial;
				}
			}
		}
		& section {
			grid-area: col-2;
		}
	}
}
main.notes,
main.play,
main.work {
	& header {
		margin-bottom: var(--l);
		padding-bottom: var(--l);
		border-bottom: 1px solid var(--light-gray-color);
		& h1+p {
			font-size: var(--text-l);
		}
	}
	& article header {
		margin-bottom: 0;
		border-bottom: none;
	}
}

main.play {
	& .thumbs {
		margin-bottom: var(--xl);
		& article {
			height: 340px;
			margin: 0 var(--m) var(--m) 0;
			& a img {
				max-width: 100%;
				height: auto;
				max-height: 100%;
			}
			&:hover {
				& img {
					transform: scale(1.01);
				}
			}
		}
		@media(max-width: 640px) {
			flex-direction: column;
			& article {
				height: auto;
			}
		}
	}

	& article.post {
			& figure {
				grid-column: ~'1 / 3';
				grid-row: ~'1 / 2';
				max-height: 740px;
				height: auto;
				width: 100%;
				margin-bottom: 0;
				background-color: var(--light-gray-color);
				display: flex;
				& img {
					margin: auto;
					height: auto;
					max-height: 100%;
				}
			}
			& img, & p {
				width: auto;
				max-width: 100%;
				flex: 0 1 auto;
			}
		@media(max-width: 480px) {
			width: 100%;
			max-height: unset;
			& a {
				& img {
					width: 100%;
					height: auto;
					max-height: none;
				}
			}
		}
	}
}
article {
	margin: auto;
	&:last-child {
		border-bottom: none;
	}
}
.post {
	display: grid;
	grid-template-columns: minmax(min-content, 480px) minmax(476px, 1fr);
	grid-template-rows: auto;
	grid-gap: var(--l);
	margin-top: var(--l);
	margin-bottom: var(--xl);
	padding-bottom: var(--xl);
	border-bottom: 1px solid var(--light-gray-color);
	@media(max-width: 840px) {
		display: block;
	}
	@media(max-width: 480px) {
		margin-bottom: var(--l);
		padding-bottom: var(--l);
	}
	& figure,
	& figure video
	{
		width: 100%;
		max-width: 1280px;
		height: auto;
	}
	& .cover,
	& figure.cover,
	& .cover figure {
		grid-column: ~'1 / 3';
		grid-row: ~'1 / 2';
		height: 100%;
		max-height: 520px;
		display: flex;
		object-fit: cover;
		background-color: var(--light-gray-color);
		& img {
			margin: auto;
			object-fit: cover;
			margin: 0 auto;
			height: 100%;
			width: auto;
			max-width: 100%;
			margin-bottom: -7px; /* Counter an unexplained bottom gap between container and image */

		}
		@media(max-width: 840px) {
			display: block;
			& img {
				height: auto;
			}
		}
	}

	& header {
		grid-column: ~'1 / 2';
		align-self: start;
		margin-left: var(--l);
		@media(max-width: 840px) {
			position: initial;
			margin-top: var(--l);
			margin-left: 0;
		}
		& :first-child {
			margin-top: 1.2rem;
		}
	}
	& .col-1 {
		grid-column: ~'1 / 2';
		margin-left: var(--l);
		@media(max-width: 840px) {
			margin-left: 0;
		}
	}
	& .col-2 {
		grid-column: ~'2 /3';
		margin-right: var(--l);
		@media(max-width: 840px) {
			margin-right: 0;
		}
		& figure {
			width: auto;
			& img {
				width: 100%;
				height: auto;
			}
		}
	}
	&.wide, &.wide a { /* Places the element across both columns */
		grid-column: ~'1 / 3';
		position: relative;
		& figure {
			margin-bottom: var(--m);
			overflow: hidden;
			& img {
			}
			& figcaption {
				margin-top: var(--m);
				margin-left: var(--m);
			}
		}
	}
	& img.wide {
		width: 100%;
		height: auto;
	}
	& h1:first-of-type {
		margin-top: var(--m);
	}
	&.wide {
		grid-gap: 0;
		& section {
			margin-left: var(--l);
			@media(max-width: 840px) {
				margin-left: inherit;
			}
		}
	}
	&.tall { /* Posts with a portrait orientation main image such as photo posts */
		display: grid;
		grid-template-columns: minmax(320px, 720px) minmax(320px, 1fr);
		grid-template-areas:
		"cover caption";
		align-items: end;
		@media(max-width: 840px) {
			grid-template-columns: minmax(320px, 720px) minmax(240px, 1fr);
			grid-template-areas:
			"cover caption";
		}
		@media(max-width: 640px) {
			display: block;
		}
		& .cover {
			grid-area: cover;
			align-self: end;
			object-fit: contain;
			max-height: none;
			margin-bottom: 0;
			& figure {
				max-width: 1280px;
				max-height: none;
				img {
					width: 100%;
					max-width: 1280px;
					object-fit: cover;
				}
				@media(max-width: 840px) {
					& img {
						height: 100%;
					}
				}
			}
		}
		& .post-body {
			margin: 0;
			grid-area: caption;
			align-self: end;
		}
	}
	&.project {
		& .col-1,
		& .col-2,
		& .wide {
			margin-top: var(--l);
			margin-bottom: var(--l);
			& figure {
				margin-top: var(--l);
				margin-bottom: var(--l);
				& img {
					width: 100%;
					max-width: 1280px;
					height: auto;
				}
			}
		}
		& .wide {
			grid-column: ~'1 / 3';
			position: relative;
		}
		& .cover {
			& img {
				width: 100%;
			}
		}
		& header + .col-2 {
			margin-top: 0;
		}
		& p, & h2 {
			margin-left: var(--l);
			@media(max-width: 840px) {
				margin-left: 0;
			}
			&.post-meta {
				margin-left: 0;
			}
		}
	}
}
.post-meta, time {  /* Meta information on blog posts like dates and tags */
	font-size: 0.88rem;
	line-height: 1.1;
	margin:0.8em 0;
	color: var(--meta-color);
	& a {
		color: var(--meta-color);
		text-decoration-color: var(--meta-color);
		text-decoration-thickness: 1px;
		margin-right: var(--xs);
		&:hover {
			color: var(--text-color);
			text-decoration-color: var(--brand-color);
		}
	}
}
/* ... */

